I realize the list box was chosen because of the filter funtionality. I opted for a css solution setting the background of precisely this control to transparent. Targeting a specific control won't break theming.  Also the layout has been redone to reflect the changes in the sidebar on the right. Special attention has been given to the correct allignment of elements in this side bar so that things don't look to skewed.

--- a/share/lutris/ui/lutris.css
+++ b/share/lutris/ui/lutris.css
@@ -8,6 +8,11 @@
   background-color: rgb(255, 199, 116);
 }
 
+.sidebar {
+  background: transparent;
+  border: 0;
+}
+
 .sidebar button {
   padding: 0;
   border: 0;
@@ -18,12 +23,29 @@
   border: 0;
 }
 
+.sidebar-header {
+  background: transparent;
+}
+
+.sidebar-row {
+  background: transparent
+}
+
+.grid, .list {
+  /*background: rgba(0, 0, 0, 0.2)*/
+}
+
+.grid button, .list button {
+  background: transparent;
+  border: 2px solid red;
+}
+
 .panel-button label {
     font-weight: normal;
 }
 
 row:selected {
-  background: transparent;
+
 }
 row:hover {
   background: rgba(0, 0, 0, 0.1);
